<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/titleText"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/ageText"/>

    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="120" />

    <TextView
        android:id="@+id/jeunesse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/jeunesseText" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/rbtOui"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/oui"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />
        <RadioButton
            android:id="@+id/rbtNon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/non"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

    <EditText
        android:id="@+id/etValeur"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:hint="@string/valeurText"
        android:inputType="numberDecimal"
        android:textColorHint="@color/grey"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/consulterColor"
        android:onClick="calculer"
        android:text="@string/consulterText"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvresult"
        android:layout_marginTop="50dp"
        android:text="@string/dotText"
        android:textSize="30sp"
        android:textAlignment="center" />

</LinearLayout>